--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@solana/web3.js": "^1.48.0",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
