--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty:check": "prettier --config ./prettier.config.js --check \"{pages,components}/**/*.{js,jsx,ts,tsx}\"",
+    "pretty:write": "prettier --config ./prettier.config.js --write \"{components,pages}/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@metaplex-foundation/js": "^0.11.7",
@@ -27,6 +29,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
