--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@solana/wallet-adapter-react-ui": "^0.9.10",
     "@solana/wallet-adapter-wallets": "^0.16.8",
     "@solana/web3.js": "^1.48.0",
+    "canvas": "^2.9.3",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.3.0"
+    "react-hot-toast": "^2.3.0",
+    "resize-image-buffer": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
