--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@solana/wallet-adapter-wallets": "^0.16.8",
     "@solana/web3.js": "^1.48.0",
     "canvas": "^2.9.3",
+    "cors": "^2.8.5",
     "next": "12.2.2",
+    "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
