--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "pretty:check": "prettier --config ./prettier.config.js --check \"{pages,components}/**/*.{js,jsx,ts,tsx}\"",
-    "pretty:write": "prettier --config ./prettier.config.js --write \"{components,pages}/**/*.{js,jsx,ts,tsx}\"",
-    "vercel-build": "yum install libuuid-devel libmount-devel zlib && cp /lib64/{libuuid,libmount,libblkid,libz}.so.1 node_modules/canvas/build/Release/ && next build"
+    "pretty:write": "prettier --config ./prettier.config.js --write \"{components,pages}/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@metaplex-foundation/js": "^0.11.7",
